[metadata]
name = kabbes_account_manager
version = 0.1.0
author = James Kabbes
author_email = james.kabbes@gmail.com
description = Manage accounts and passwords; edit this file 'description' to name the repository.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://pypi.org/project/kabbes-account-manager/
project_urls =
    GitHub = https://github.com/jameskabbes/imessage
    Documentation = https://jameskabbes.github.io/account_manager
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    kabbes_py_starter
    kabbes_parent_class
    kabbes_dir_ops
    kabbes_menu
    kabbes_cryptography
    kabbes_nanoid
    kabbes_password_creator
    pandas
    


[options.packages.find]
where = src